# agegrid

./: .gitignore  .gitmodules  default_config.yaml  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
agegrid/: run_paleo_age_grids.py
src/agegrid/: automatic_age_grid_seeding.py  reconstruct_by_topologies.py  run_paleo_age_grids.py  utils.py
