[build-system]
  requires = ["setuptools >= 61.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "paleo-age-grids"
  version = "1.2.1"
  dependencies = [
    "numpy",
    "xarray",
    "scikit-image",
    "astropy-healpix",
    "scipy",
    "pygplates",
    "PlateTectonicTools",
    "joblib",
    "setuptools<70"
  ]
  requires-python = ">=3.8"
  authors = [
    {name = "Lucas Amion", email = "lamion@dcc.uchile.cl"},
  ]
  maintainers = [
    {name = "Lucas Amion", email = "lamion@dcc.uchile.cl"},
  ]
  description = "Code for reconstructing seafloor age distributions from GPlates full-plate tectonic reconstructions."
  readme = "README.md"
  license = {file = "LICENSE"}

[project.urls]
  "Source Code" = "https://github.com/LucasAmion/agegrid"
