[build-system]
  requires = ["setuptools >= 61.0", "setuptools-scm >= 8.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "paleo-age-grids"
  dynamic = ["version"]
  dependencies = [
    "numpy",
    "xarray",
    "scikit-image",
    "astropy-healpix",
    "scipy",
    "pygplates",
    "PlateTectonicTools",
    "joblib",
    "setuptools<70"
  ]
  requires-python = ">=3.8"
  authors = [
    {name = "Lucas Amion", email = "lamion@dcc.uchile.cl"},
  ]
  maintainers = [
    {name = "Lucas Amion", email = "lamion@dcc.uchile.cl"},
  ]
  description = "Code for reconstructing seafloor age distributions from GPlates full-plate tectonic reconstructions."
  readme = "README.md"
  license = {file = "LICENSE"}

[tool.setuptools_scm]
  version_file = "src/agegrid/_version.py"

[project.urls]
  "Source Code" = "https://github.com/LucasAmion/agegrid"
